--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,10 @@
 version: 2
 
 build:
-  os: "ubuntu-22.04"
-  tools:
-    python: "3"
+    os: "ubuntu-22.04"
+    tools:
+        python: "3"
+
+python:
+    install:
+        - requirements: requirements.txt
